Stable versions
---------------

4.2.1 ():
	- portability fixes

4.2.0 (20131109):
	- ignore invalid Noisetracker effects
	- add API call to load a module from a buffer in memory
	- add API call to read the player state (loaded, playing, etc)
	- add API call to set the player master volume
	- add API calls to reserve channels and play instruments on them
	- add loader for His Master's Noise modules
	- fix loop parameter in xmp_play_buffer()
	- fix MED synth volume slide reset on new note
	- fix instrument mapping in IT old instrument format
	- fix number of tracks in IT loader
	- fix LHA depacker header parsing
	- fix thread-unsafe Archimedes Tracker loader
	- fix thread-unsafe Digital Tracker loader
	- fix handling of loader errors
	- fix S3M 16-bit sample replay
	- refactor handling of format-specific instrument and channel data
	- refactor MED synth command interpreter
	- rewrite SQSH depacker code
	- disable rarely used ZOO depacker
	- code cleanup

4.1.5 (20130527):
	Fix bugs reported by Andreas Falkenhahn:
	- fix OctaMED decay event and effect decoding
	- fix The Player 6.0A pattern depacking
	- fix Oktalyzer instrument to sample mapping

4.1.4 (20130519):
	- fix array initialization in IT loader (reported by Jacques Philippe)
	- remove regression tests from the distribution package
	- address license issues in  md5 digest code
	- address Visual C++ portability issues
	- code cleanup

4.1.3 (20130511):
	- fix envelope reset on new instrument (reported by ArtRemix)
	- fix JMP END sequences in MED synth wave table
	- fix IT portamento after note cut
	- fix IT and XM envelope resets
	- refactor virtual channel code
	- code cleanup

4.1.2 (20130504):
	- fix Graoumf Tracker arpeggio, set linear volume and set number
	  of frames effects (reported by Misty De Meo)
	- fix MTM sample fine tuning
	- fix unsigned conversion sample range when downmixing
	- fix memory leaks when attempting to load corrupted modules
	- refactor note slide effect code

4.1.1 (20130428):