@@ -100,17 +100,6 @@ Powerpack depacker
  This software is in the Public Domain
  
 
-YM2149 emulator
-
- Extended YM-2149 Emulator, with ATARI music demos effects
- Copyright (C) 1995-2012 Arnaud Carre
-
- The YM2149 emulator is free software; you can redistribute it and/or
- modify it under the terms of the GNU Lesser General Public
- License as published by the Free Software Foundation; either
- version 2.1 of the License, or (at your option) any later version.
-
-
 YM3812 emulator
 
  fmopl.c -- software implementation of FM sound generator
